[gd_scene load_steps=7 format=3 uid="uid://cw0p0vqmn4qyn"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_cvlyp"]
[ext_resource type="AudioStream" uid="uid://djb66ruw3tbwt" path="res://assets/sounds/sfx/Retro PickUp Coin 04.wav" id="2_77dcg"]
[ext_resource type="AudioStream" uid="uid://c184xa3nyende" path="res://assets/sounds/music/JDSherbert - Minigame Music Pack - Digital Waves.ogg" id="3_vl05c"]
[ext_resource type="AudioStream" uid="uid://d3facckunh1y0" path="res://assets/sounds/sfx/Spell_Casting_3.wav" id="4_0tsf3"]
[ext_resource type="AudioStream" uid="uid://dl527srvxquki" path="res://assets/sounds/sfx/Retro Negative Melody 02 - space voice pad.wav" id="4_dtfe4"]
[ext_resource type="AudioStream" uid="uid://bwiba7d07plqd" path="res://assets/sounds/sfx/error_style_3_001.wav" id="5_kpxhj"]

[node name="GameManager" type="Node2D" groups=["manager"]]
script = ExtResource("1_cvlyp")
background_music = ExtResource("3_vl05c")
pickup_sfx = ExtResource("2_77dcg")
death_sfx = ExtResource("4_dtfe4")
capture_sfx = ExtResource("4_0tsf3")
ammo_error_sfx = ExtResource("5_kpxhj")

[node name="ScoreTimer" type="Timer" parent="."]

[node name="EnemySpawn" type="Timer" parent="."]
wait_time = 5.0

[node name="EnemyMove" type="Timer" parent="."]
wait_time = 2.0

[node name="CapturePointTimer" type="Timer" parent="."]
wait_time = 15.0

[node name="CapturePointAnimation" type="Timer" parent="."]
wait_time = 12.0

[node name="TimeCounter" type="Timer" parent="."]

[connection signal="gem_converted" from="." to="." method="_on_gem_converted"]
[connection signal="timeout" from="EnemySpawn" to="." method="_on_enemy_spawn_timeout"]
[connection signal="timeout" from="EnemyMove" to="." method="_on_enemy_move_timeout"]
[connection signal="timeout" from="CapturePointTimer" to="." method="_on_capture_point_timer_timeout"]
[connection signal="timeout" from="CapturePointAnimation" to="." method="_on_capture_point_animation_timeout"]
[connection signal="timeout" from="TimeCounter" to="." method="_on_time_counter_timeout"]
